# zed

./: AGENT_CENTER_ITEM_SPEC.md  AGENT_CENTER_NEXT_STEP.md  Cargo.toml  MULTI_WORKSPACE_IMPLEMENTATION_PLAN.md  ZED_SWARM_CHECKLIST.md  agent_tab_icon_alignment_notes.md
assets/keymaps/: default-linux.json  default-macos.json
crates/acp_thread/: Cargo.toml
crates/acp_thread/src/: acp_thread.rs
crates/agent/src/: agent.rs  db.rs  thread.rs  thread_store.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_settings/src/prompts/: short_title_prompt.txt
crates/agent_ui/src/: agent_chat_content.rs  agent_chat_view.rs  agent_diff.rs  agent_panel.rs  agent_ui.rs
crates/agent_ui/src/acp/: thread_history.rs  thread_view.rs
crates/agent_ui_v2/src/: agent_thread_pane.rs
crates/language_model/src/: registry.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: agent.rs  settings_content.rs  workspace.rs
crates/swarm_chat/: Cargo.toml
crates/swarm_chat/src/: chat_panel.rs  chat_sidebar.rs  codex_client.rs  message_input.rs  message_list.rs  message_view.rs  swarm_chat.rs
crates/swarm_file_picker/: Cargo.toml
crates/swarm_file_picker/src/: commit_picker.rs  file_picker_modal.rs  swarm_file_picker.rs
crates/swarm_store/: Cargo.toml
crates/swarm_store/src/: conversation.rs  db_schema.rs  swarm_store.rs
crates/ui/src/components/: icon.rs  tab.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: item.rs  pane.rs  workspace.rs  worktree_registry.rs
crates/worktrees_panel/: Cargo.toml
crates/worktrees_panel/src/: worktrees_panel.rs  worktrees_panel_settings.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
crates/zed_swarm/: Cargo.toml
crates/zed_swarm/src/: assets.rs  env.rs  main.rs  swarm_window.rs
plans/: AGENT_WORKTREE_PLAN.md  MULTI_WORKSPACE_IMPLEMENTATION_PLAN.md  MULTI_WORKSPACE_IMPLEMENTATION_SUMMARY.md  PLAN-agent-tab-title-generation.md  PLAN-agent-thread-updates.md  RESTORE_AGENT_CHAT_SESSION.md  ZED_SWARM_CHECKLIST.md  worktrees_panel_improvements.md
