[package]
name = "swarm_chat"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/swarm_chat.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
markdown.workspace = true
picker.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true

swarm_store = { path = "../swarm_store" }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
