[package]
name = "swarm_file_picker"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/swarm_file_picker.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
fs.workspace = true
fuzzy.workspace = true
git.workspace = true
gpui.workspace = true
picker.workspace = true
serde = { workspace = true, features = ["derive"] }
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
