[package]
name = "swarm_store"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/swarm_store.rs"

[dependencies]
anyhow.workspace = true
db.workspace = true
gpui.workspace = true
log.workspace = true
paths.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlez.workspace = true
sqlez_macros.workspace = true
uuid.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
