[package]
name = "zed_swarm"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "zed-swarm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
collections.workspace = true
db.workspace = true
editor.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
gpui = { workspace = true, default-features = true }
log.workspace = true
markdown.workspace = true
menu.workspace = true
paths.workspace = true
picker.workspace = true
reqwest_client.workspace = true
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
settings.workspace = true
simplelog.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true
smol.workspace = true

swarm_chat = { path = "../swarm_chat" }
swarm_file_picker = { path = "../swarm_file_picker" }
swarm_store = { path = "../swarm_store" }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
